# osLab

./: .gitignore  README.md  note.txt
chapter6/a/: bochsrc
chapter6/b/: Makefile  a.img
chapter6/b/kernel/: kernel.asm  kernel4.asm  protect.c
chapter6/e/: Makefile  a.img  bochsrc
chapter6/e/kernel/: clock.c  protect.c
chapter6/e/lib/: klib.c
chapter6/o/: a.img  snapshot.txt
chapter6/o/kernel/: main.c  protect.c
chapter6/r/: Makefile
chapter6/r/include/: global.h.save
lab1/: bochsrc  boot.asm
lab2/: execute.sh  main  main.c  my_print.asm  print  print.asm  similarity  similarity.c  similarity.h  test  test.c
lab3/: CMakeLists.txt  Makefile  a.img  bochsrc
lab3/boot/: boot.asm  loader.asm
lab3/include/: keyboard.h  string.h  tty.h
lab3/kernel/: clock.c  console.c  i8259.c  keyboard.c  main.c  protect.c  start.c  tty.c
lab3/lib/: klib.c  kliba.asm
lab4/: .~lock.lab4.odt#  CMakeLists.txt  Makefile  a.img  lab4.odt
lab4/include/: const.h  proc.h  proto.h
lab4/kernel/: clock.c  global.c  main.c  proc.c  syscall.asm
r/: CMakeLists.txt  Makefile  a.img  copy.txt  snapshot.txt
r/include/: const.h  global.h  proc.h  proto.h
r/kernel/: clock.c  global.c  main.c  proc.c  syscall.asm
